# meshy-watchy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  config.container.toml
.github/workflows/: rust-ci.yml
assets/: package-lock.json  package.json  tailwind.config.js
assets/src/: app.css  app.js
src/: config.rs  database.rs  main.rs  models.rs  mqtt.rs  replay_messages.rs  replay_nodeinfo.rs  web.rs  webhooks.rs
templates/: dashboard.html  map.html  messages.html  nodes.html  root.html  webhooks.html
