[package]
name = "mesh-watchy"
version = "0.1.0"
edition = "2021"
authors = ["Block"]
description = "Mesh Watchy - A comprehensive monitoring and web interface for Meshtastic networks"

[[bin]]
name = "mesh-watchy"
path = "src/main.rs"

[[bin]]
name = "replay-nodeinfo"
path = "src/replay_nodeinfo.rs"

[[bin]]
name = "replay-messages"
path = "src/replay_messages.rs"

[dependencies]
# Web framework
axum = { version = "0.8.4", features = ["ws"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs", "cors"] }

# WebSocket support
tokio-tungstenite = "0.21"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Additional dependencies for async and futures
futures = "0.3"

# Asset embedding
include_dir = "0.7"
mime_guess = "2.0"

# MQTT client
rumqttc = "0.24"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
libsqlite3-sys = { version = "0.27", features = ["bundled"] }

# Configuration
toml = "0.8"

# HTTP client for webhooks
reqwest = { version = "0.11", features = ["json"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# Template engine  
minijinja = { version = "2.10.2", features = ["loader", "builtins", "json", "urlencode"] }
minijinja-embed = "2.10.2"

openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
minijinja-embed = "2.10.2"

[dev-dependencies]
axum-test = "18.1"
tempfile = "3.0"
serde_json = "1.0"


[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"
